CHANGES IN FLTK 1.1.0

	- Added Greg Ercolano's MacOS filedescriptor support.
	- Fixed text width bug.
	- A change in fl_fix_focus() broken click-focus in FLWM.
	- Cygwin with -mnocygwin didn't like the FL/math.h
	  header file.
	- Fl_Browser_ cleared the click count unnecessarily.
	- MacOS: Pixmap draw fix, gl_font implemented
	  FL_FOCUS fix, window type fix for modal and nonmodal
	  windows, glut uninitialised 'display' proc fix
	- Now support FLTK_1_0_COMPAT symbol to define
	  compatibility macros for the old FLTK 1.0.x function
	  names to the 1.1.x names.
	- Now translate the window coordinates when a window is
	  shown, moved, or resized.  This should fix the "menus
	  showing up at the wrong position" bug under XFree86.
	- Fixed some more problems with the Fl_BMP_Image file
	  loader.
	- BC++ fixes.
	- The pixmap_browser demo didn't check for a NULL image
	  pointer.
	- Fl_File_Icon::find() now uses fl_filename_isdir()
	  under WIN32 to check for directories.
	- Fl_File_Chooser's preview code called refcount()
	  on the deleted image's object.
	- Fixed another problem with the Fl_BMP_Image loader.
	- The fl_file_chooser() callback was being called with a
	  NULL filename.
	- Documented that fl_push_clip() is preferred over
	  fl_clip(), with a corresponding source change.
	- Minor changes to the MacOS X event handling code.
	- Added syntax highlighting example code to the editor
	  test program.
	- Fl_Text_Display didn't range check style buffer
	  values.
	- Added "dark" color constants (FL_DARK_RED, etc.)
	- The MacOS font code was missing definitions for
	  fl_font_ and fl_size_.


CHANGES IN FLTK 1.1.0rc3

	- Documentation updates.
	- New file chooser from design contest.
	- Did some testing with Valgrind and fixed some memory
	  problems in Fl_Help_View::Fl_HelpView,
	  Fl_Menu_::remove(), Fl_Text_Display::draw_vline(), and
	  resizeform() (convenience dialogs).
	- Fixed some redraw() bugs, and now redraw portions of